* Fixed: Compiled plugins upload on PHP 5.
* Fixed: Restored empty 'height' and 'width' attributes behaviour of <txp:image />.
* Added: Option to define a Content Security Policy header for the Textpattern
  admin-side via config.php. 
* Added: PHPMailer for third-party SMTP delivery. See Admin>Preferences>Mail.
* Added: Plugins can be uploaded from a URL by dragging to upload textarea.
* Added: Compiled plugins can be uploaded via Browse... feature.
* Changed: Plugins of all types trigger verify step (with improved security).
* Developer: Introduce UI class library for building interface components.
* jQuery 3.6.0.
* Textile 3.7.7. See https://github.com/textile/php-textile/releases/tag/v3.7.7
  for full list of changes in this release (thanks, gocom).

Changes in 4.8.8 (24 Jan 2022)

* Maintenance release with support for PHP 8.1, security enhancements, general
  improvements and bug fixes.
* Security: Fix reported cross-site scripting issue relating to article preview
  CSRF token (many thanks, Paul Ritchie at Pentest Limited).
* Fixed: More robust numeric searches.
* Fixed: Improved query efficiency of category operations.
* Fixed: Required parameters after optional in tag builder (thanks, phiw13).
* Fixed: Admin-side pagination when sorting by non-unique values.
* Added: PHP 8.1 support.
* Added: Natural search mode.
* Added: Random form selection.
* Added: Support for AVIF image format, on PHP 8.1 or higher.
* Added: Global 'limit', 'offset' and 'sort' attributes.
* Added: 'url_title' attribute to <txp:article[_custom] />.
* Added: 'range' attribute to <txp:article_image />.
* Added: 'date' and 'time' attributes to <txp:if_expired />.
* Added: 'calendar' attribute to <txp:posted /> and similar tags.
* Added: Substring extraction via 'escape' attribute.
* Added: <txp:items_count /> tag.
* Added: Expanded conditional 'match' attribute with comparison operators.
* Added: 'UTC' is now a permitted time zone.
* Added: Custom date formats.